apps/calcom/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: calcom
  labels:
    name: calcom
    tier: scheduling
